# VECTRO_MAIN

./: LICENSE  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: README.md  main.py
backend/app/core/config/: __init__.py  config.py  constants.py  settings.py
backend/app/core/database/: __init__.py  base.py  session.py
backend/app/modules/users/: README.md  __init__.py
backend/app/modules/users/api/: __init__.py
backend/app/modules/users/application/: __init__.py
backend/app/modules/users/domain/: __init__.py  exceptions.py  user_status.py
backend/app/modules/users/domain/entities/: __init__.py  user.py
backend/app/modules/users/domain/value_objects/: __init__.py  display_name.py  email_address.py  user_id.py
backend/app/modules/users/infrastructure/: __init__.py
backend/tests/modules/users/domain/: test_user.py
